Improve SEO (add meta description, language attribute, OG/Twitter tags, canonical URL)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!doctype html>
-<html lang="">
+<html lang="hr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni. Kontaktirajte nas za besplatnu procjenu."
+    />
+    <link rel="canonical" href="https://kombi-transport.com/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Kombi Transport - Profesionalne usluge prijevoza" />
+    <meta
+      property="og:description"
+      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni."
+    />
+    <meta property="og:url" content="https://kombi-transport.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Kombi Transport - Profesionalne usluge prijevoza" />
+    <meta
+      name="twitter:description"
+      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni."
+    />
+
     <title>Kombi transport</title>
 
-    <!-- JSON-LD Structured Data for Local Business -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
