Add new routes to SEO

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <link rel="canonical" href="https://kombi-transport.com/" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Kombi Transport - Profesionalne usluge prijevoza" />
+    <meta property="og:title" content="Kombi Transport - Profesionalne usluge prijevoza Zagreb" />
     <meta
       property="og:description"
-      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni."
+      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni. Kontaktirajte nas za besplatnu procjenu."
     />
     <meta property="og:url" content="https://kombi-transport.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Kombi Transport - Profesionalne usluge prijevoza" />
+    <meta name="twitter:title" content="Kombi Transport - Profesionalne usluge prijevoza Zagreb" />
     <meta
       name="twitter:description"
-      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni."
+      content="Profesionalne usluge prijevoza u Zagrebu - brzi transport, selidbe i dostava po najnižoj cijeni. Kontaktirajte nas za besplatnu procjenu."
     />
 
-    <title>Kombi transport</title>
+    <title>Kombi Transport - Profesionalne usluge prijevoza Zagreb</title>
 
     <script type="application/ld+json">
       {
