--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Kombi Transport</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
@@ -22,18 +22,29 @@
       // pathSegmentsToKeep should be 1.
       // If you are not using Project Pages, or if you are using a custom domain,
       // then set pathSegmentsToKeep to 0.
-      var pathSegmentsToKeep = 0;
+      var pathSegmentsToKeep = 0
 
-      var l = window.location;
+      var l = window.location
       l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+        l.protocol +
+          '//' +
+          l.hostname +
+          (l.port ? ':' + l.port : '') +
+          l.pathname
+            .split('/')
+            .slice(0, 1 + pathSegmentsToKeep)
+            .join('/') +
+          '/?/' +
+          l.pathname
+            .slice(1)
+            .split('/')
+            .slice(pathSegmentsToKeep)
+            .join('/')
+            .replace(/&/g, '~and~') +
+          (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+          l.hash,
+      )
     </script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
